Add simple graph class

--- a/AntColonyOptimization/AntColonyOptimization/AntColonyOptimization.vcxproj.filters
+++ b/AntColonyOptimization/AntColonyOptimization/AntColonyOptimization.vcxproj.filters
@@ -6,5 +6,19 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="RandomNumberGenerator.h" />
+    <ClInclude Include="GraphNode.h">
+      <Filter>Graph</Filter>
+    </ClInclude>
+    <ClInclude Include="Graph.h">
+      <Filter>Graph</Filter>
+    </ClInclude>
+    <ClInclude Include="GraphEdge.h">
+      <Filter>Graph</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <Filter Include="Graph">
+      <UniqueIdentifier>{7388c639-bf64-4540-ba5c-a13242e45bcb}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
 </Project>
