--- a/AntColonyOptimization/AntColonyOptimization/AntColonyOptimization.vcxproj
+++ b/AntColonyOptimization/AntColonyOptimization/AntColonyOptimization.vcxproj
@@ -150,12 +150,18 @@
   <ItemGroup>
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="RandomNumberGenerator.cpp" />
+    <ClCompile Include="SfmlCamera.cpp" />
+    <ClCompile Include="SfmlInput.cpp" />
+    <ClCompile Include="Tile.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Graph.h" />
     <ClInclude Include="GraphEdge.h" />
     <ClInclude Include="GraphNode.h" />
     <ClInclude Include="RandomNumberGenerator.h" />
+    <ClInclude Include="SfmlCamera.h" />
+    <ClInclude Include="SfmlInput.h" />
+    <ClInclude Include="Tile.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
