--- a/AntColonyOptimization/AntColonyOptimization/AntColonyOptimization.vcxproj.filters
+++ b/AntColonyOptimization/AntColonyOptimization/AntColonyOptimization.vcxproj.filters
@@ -4,8 +4,15 @@
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="RandomNumberGenerator.cpp" />
     <ClCompile Include="Tile.cpp" />
-    <ClCompile Include="SfmlCamera.cpp" />
-    <ClCompile Include="SfmlInput.cpp" />
+    <ClCompile Include="SfmlCamera.cpp">
+      <Filter>SfmlComponents</Filter>
+    </ClCompile>
+    <ClCompile Include="SfmlInput.cpp">
+      <Filter>SfmlComponents</Filter>
+    </ClCompile>
+    <ClCompile Include="SfmlWindow.cpp">
+      <Filter>SfmlComponents</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="RandomNumberGenerator.h" />
@@ -19,12 +26,22 @@
       <Filter>Graph</Filter>
     </ClInclude>
     <ClInclude Include="Tile.h" />
-    <ClInclude Include="SfmlCamera.h" />
-    <ClInclude Include="SfmlInput.h" />
+    <ClInclude Include="SfmlWindow.h">
+      <Filter>SfmlComponents</Filter>
+    </ClInclude>
+    <ClInclude Include="SfmlCamera.h">
+      <Filter>SfmlComponents</Filter>
+    </ClInclude>
+    <ClInclude Include="SfmlInput.h">
+      <Filter>SfmlComponents</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Graph">
       <UniqueIdentifier>{7388c639-bf64-4540-ba5c-a13242e45bcb}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="SfmlComponents">
+      <UniqueIdentifier>{940a2458-8620-45d5-98dd-8e8f1dc17c39}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
