--- a/AntColonyOptimization/AntColonyOptimization/AntColonyOptimization.vcxproj
+++ b/AntColonyOptimization/AntColonyOptimization/AntColonyOptimization.vcxproj
@@ -155,6 +155,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="AntAgent.cpp" />
+    <ClCompile Include="AntManager.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="RandomNumberGenerator.cpp" />
     <ClCompile Include="SfmlCamera.cpp" />
@@ -165,6 +166,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AntAgent.h" />
+    <ClInclude Include="AntManager.h" />
     <ClInclude Include="RandomNumberGenerator.h" />
     <ClInclude Include="SfmlCamera.h" />
     <ClInclude Include="SfmlInput.h" />
